Correccion base de datos

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .env
 src/main/resources
+https://github.com/rd-sudo/EcoTlali/security/secret-scanning/unblock-secret/2xnSoIyss4LPca4UkgKhSqm40Z8
+target/classes/credenciales.json
